Reduce flash by hiding the submission comment form as soon as it appears Move application of item page CSS to document_start too, or else the reply link will flash if it should be hidden Refactor duplicated adding/setting of style logic into a setCss() function Fixed a navigation stylesheet being created when no related features are active Replaced a few != null assignments with ??= Added an option to hide the root/parent/prev/mav links on collapsed comments Separated some options out into new Comments and UX groups Added an --item-spacing variable to control space between list page items

--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ html {
   --fade-8: #cecece;
   --fade-9: #cecece;
 
+  --item-spacing: 5px;
+
   --logo-bg: transparent;
   --logo-mark: var(--text-topsel);
   --logo-border: var(--logo-mark);
@@ -140,6 +142,9 @@ body { background-color: var(--bg-page); }
 /* #endregion */
 
 /* #region Additional theming */
+html[item-list] #bigbox .spacer {
+  height: var(--item-spacing) !important;
+}
 /* Provide basic styling for unstyled pages */
 html[unstyled] body {
   color: var(--text-primary);
